# sea-surface-temp-viz

./: .gitignore  CLAUDE.md  GFS-INTEGRATION-PLAN.md  LICENSE  README.md  export_timeseries.py  pipeline.py  prune-cache.py  pyproject.toml  regen-maps.sh  regions.py  requirements.txt  run-gfs-pipeline.sh  sea-surface-temps.py  sst-data-cache.json  upload-to-s3.py
.github/workflows/: make-images.yml  python-app.yml
masks/: antarctic.npy  arctic.npy  atlantic.npy  indian.npy  pacific.npy
scripts/: aggregate_archive.py  backfill_era5.py  backfill_era5_arco.py  backfill_gfs.py  backfill_oisst.py  build_era5_climatology.py  generate_era5_textures_batch.py  merge_cache.py  migrate_cache.py  precompute_masks.py  visualize_regions.py
sources/: __init__.py  base.py  era5.py  gfs.py  oisst.py
