[project]
name = "sea-surface-temp-viz"
version = "0.1.0"
description = "Visualization of earth sea surface temperatures"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "boto3>=1.35.0",
    "h5py>=3.11.0",
    "matplotlib>3.9.0",
    "numpy>=2.1.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "urllib3>=2.2.2",
]

# Pyright language server: use our .venv
[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.2",
    "ruff>=0.6.4",
]
