[project]
name = "sea-surface-temp-viz"
version = "0.1.0"
description = "Visualization of earth sea surface temperatures"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "boto3>=1.35.0",
    "cdsapi>=0.7.4",
    "cfgrib>=0.9.12",
    "eccodes>=2.38.0",
    "eccodeslib>=2.47.1.20",
    "gcsfs>=2026.5.0",
    "h5py>=3.16.0",
    "matplotlib>3.9.0",
    "netcdf4>=1.7.1",
    "numpy>=2.1.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "scipy>=1.14.0",
    "urllib3>=2.7.0",
    "xarray>=2024.10.0",
    "zarr>=3.2.1",
]

# Pyright language server: use our .venv
[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=9.0.3",
    "ruff>=0.6.4",
]
